--- a/index.html
+++ b/index.html
@@ -1,96 +1,210 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>ARQUIVO CONFIDENCIAL</title>
-    <style>
-        body {
-            background-color: #0a0f1a;
-            color: #cfd8dc;
-            font-family: Arial, Helvetica, sans-serif;
-            padding: 40px;
-        }
+<meta charset="UTF-8">
+<title>ARQUIVO CONFIDENCIAL — GG-SKU-003</title>
 
-        .container {
-            max-width: 800px;
-            margin: auto;
-            border: 1px solid #1f2a44;
-            padding: 30px;
-            background-color: #0f1629;
-        }
+<style>
+    body {
+        background-color: #1b1a17;
+        background-image: 
+            radial-gradient(rgba(0,0,0,0.25) 1px, transparent 1px),
+            linear-gradient(transparent 96%, rgba(0,0,0,0.15) 100%);
+        background-size: 3px 3px, 100% 30px;
+        color: #e0d8c3;
+        font-family: "Times New Roman", Georgia, serif;
+        padding: 40px;
+    }
 
-        h1 {
-            color: #ff4d4d;
-            text-align: center;
-        }
+    .document {
+        max-width: 900px;
+        margin: auto;
+        background-color: #2a271f;
+        padding: 50px;
+        border: 2px solid #3a3528;
+        box-shadow: 0 0 40px rgba(0,0,0,0.8);
+        position: relative;
+    }
 
-        h2 {
-            color: #7aa2ff;
-            margin-top: 30px;
-        }
+    .document::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background-image:
+            radial-gradient(rgba(0,0,0,0.15) 1px, transparent 2px),
+            radial-gradient(rgba(255,255,255,0.03) 1px, transparent 2px);
+        background-size: 4px 4px;
+        pointer-events: none;
+    }
 
-        .warning {
-            color: #ffb347;
-            font-size: 14px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
+    h1, h2, h3 {
+        color: #cbbf9a;
+        border-bottom: 1px solid #5a523f;
+        padding-bottom: 5px;
+        margin-top: 40px;
+    }
 
-        .censored {
-            background-color: #000;
-            color: #000;
-            display: inline-block;
-            padding: 2px 6px;
-            margin: 2px 0;
-        }
+    h1 {
+        text-align: center;
+        letter-spacing: 3px;
+    }
 
-        footer {
-            margin-top: 40px;
-            font-size: 12px;
-            color: #6c7a89;
-            text-align: center;
-        }
-    </style>
+    .warning {
+        text-align: center;
+        color: #a33;
+        font-weight: bold;
+        margin-bottom: 30px;
+        text-transform: uppercase;
+    }
+
+    .stamp {
+        position: absolute;
+        top: 30px;
+        right: 40px;
+        color: rgba(200,0,0,0.4);
+        font-size: 48px;
+        font-weight: bold;
+        transform: rotate(-15deg);
+        border: 4px solid rgba(200,0,0,0.4);
+        padding: 10px 20px;
+    }
+
+    .censored {
+        background-color: #000;
+        color: #000;
+        padding: 2px 6px;
+        display: inline-block;
+    }
+
+    ul {
+        margin-left: 20px;
+    }
+
+    li {
+        margin-bottom: 6px;
+    }
+
+    .note {
+        margin-top: 30px;
+        font-style: italic;
+        color: #b5aa89;
+    }
+
+    footer {
+        margin-top: 50px;
+        font-size: 12px;
+        color: #9a927a;
+        text-align: center;
+        border-top: 1px solid #5a523f;
+        padding-top: 10px;
+    }
+</style>
 </head>
+
 <body>
 
-<div class="container">
+<div class="document">
 
-    <h1>ACESSO RESTRITO</h1>
-    <div class="warning">
-        Este arquivo pertence a um banco de dados sigiloso.<br>
-        Todo acesso é monitorado.
-    </div>
+<div class="stamp">CONFIDENCIAL</div>
 
-    <h2>Equipe Anterior — STATUS</h2>
-    <p><strong>Designação:</strong> Equipe Liminal-03</p>
-    <p><strong>Atuação:</strong> Contenção Paranormal</p>
-    <p><strong>Status:</strong> <span style="color:red;">DESATIVADA</span></p>
+<h1>DIVISÃO S.K.U.L.L</h1>
 
-    <h2>Última Missão Registrada</h2>
-    <p>
-        Local: <span class="censored">████████</span><br>
-        Data: <span class="censored">██/██/████</span><br>
-        Natureza da ameaça: Classificação desconhecida
-    </p>
+<div class="warning">
+ACESSO NÃO AUTORIZADO RESULTARÁ EM INVESTIGAÇÃO FEDERAL
+</div>
 
-    <h2>Observações</h2>
-    <p>
-        A equipe apresentou sinais de contato direto com manifestações
-        não catalogadas.<br><br>
-        Após o incidente, todos os registros foram parcialmente apagados.
-    </p>
+<p><strong>Designação completa:</strong><br>
+Spectral Knights of the Unveiled Liminal Layers</p>
 
-    <h2>Nota Interna</h2>
-    <p>
-        “Eles chegaram perto demais.<br>
-        O mar respondeu.”
-    </p>
+<p><strong>Sistema:</strong><br>
+Sistema do Governo dos Estados Unidos — Palmbridge / Miami</p>
 
-    <footer>
-        GOLDENGATE SYSTEMS — Arquivo nº GG-LMN-003<br>
-        Nível de autorização insuficiente para mais detalhes.
-    </footer>
+<p><strong>Número do Arquivo:</strong><br>
+GG-SKU-003</p>
+
+<h2>MEMBROS REGISTRADOS</h2>
+
+<ul>
+    <li><strong>Raffa Borges Pinto</strong> — Brasil (Rio de Janeiro)<br>
+    Função: Mercenário | Idade: 26 anos</li>
+
+    <li><strong>Albert Schneider</strong> — Alemanha (Frankfurt)<br>
+    Função: Cientista | Idade: 32 anos</li>
+
+    <li><strong>Lei Zhang</strong> — China (Fujian)<br>
+    Função: Criminoso | Idade: 25 anos</li>
+
+    <li><strong>Akil Mohamed</strong> — Marrocos (Mogador)<br>
+    Função: Artista | Idade: 27 anos</li>
+</ul>
+
+<h2>HISTÓRICO DE MISSÕES</h2>
+
+<ul>
+    <li>Confronto contra os mortos — Texas (nenhuma baixa)</li>
+    <li>Exorcismo em Asilo — Oregon (2 baixas inocentes)</li>
+    <li>Assassino das Oito Portas — Novo México (8 baixas inocentes)</li>
+    <li>Velha da Estrada — Novo México (nenhuma baixa)</li>
+    <li>Caçada Noturna — Oregon (nenhuma baixa)</li>
+    <li>Acampamento das Cabras — Texas (1 baixa inocente)</li>
+    <li>Rancho Skinwalker — Utah (2 baixas inocentes)</li>
+    <li>Cemitério Vivo — Novo México (nenhuma baixa)</li>
+    <li><strong>Homem do Túnel — Miami (3 baixas da equipe)</strong></li>
+</ul>
+
+<h2>RELATÓRIO INTERNO</h2>
+
+<p>
+O agente <strong>Victor Callaham</strong> recebeu autorização direta do governo
+e da divisão de agentes especializados no oculto para recriar uma força de contenção paranormal.
+</p>
+
+<p>
+Nenhum apoio logístico, financeiro ou de treinamento foi fornecido.
+A busca por agentes foi autorizada em escala global, priorizando indivíduos
+sem vínculos entre si e sem fatores de dissuasão emocional.
+</p>
+
+<p>
+O agente Callaham recrutou inicialmente um cientista conduzindo pesquisas
+não autorizadas envolvendo mortos-vivos, oferecendo instalações
+em um laboratório secreto localizado em <span class="censored">██████████</span>.
+</p>
+
+<p>
+A viagem à China foi marcada por confrontos com gangues rivais.
+Lei Zhang aceitou a proposta após testemunhar manifestações sobrenaturais
+e ser informado sobre segredos capazes de elevar sua organização acima das demais.
+</p>
+
+<p>
+Akil Mohamed recebeu instruções enquanto produzia arte em estado de transe.
+Após o contato inicial, múltiplos eventos anômalos foram registrados
+sempre que o agente se aproximava do mar.
+</p>
+
+<p>
+Raffa Borges Pinto foi integrado à divisão após ser resgatado durante
+a primeira missão operacional da equipe.
+</p>
+
+<h2>STATUS ATUAL</h2>
+
+<p>
+Divisão considerada <strong>INATIVA</strong>.<br>
+Registros parcialmente apagados.<br>
+Arquivos remanescentes sob monitoramento.
+</p>
+
+<p class="note">
+“Eles olharam fundo demais.<br>
+E algo no fundo respondeu.”
+</p>
+
+<footer>
+GOLDENGATE SYSTEMS — ARQUIVO GG-SKU-003<br>
+Nível de autorização insuficiente para acesso completo
+</footer>
 
 </div>
 
