--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>ARQUIVO CONFIDENCIAL — GG-SKU-003</title>
+<title>ARQUIVO CONFIDENCIAL — MP-SKU-003</title>
 
 <style>
     body {
@@ -202,7 +202,7 @@ E algo no fundo respondeu.”
 </p>
 
 <footer>
-GOLDENGATE SYSTEMS — ARQUIVO GG-SKU-003<br>
+PALMBRIDGE SYSTEMS — ARQUIVO MP-SKU-003<br>
 Nível de autorização insuficiente para acesso completo
 </footer>
 
